fix section tablette

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22731,8 +22731,8 @@ p {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
   .container-quatre {
     flex-direction: column;
@@ -22740,6 +22740,7 @@ p {
     height: -moz-fit-content;
     height: fit-content;
     gap: 0px;
+    width: 55%;
   }
   .box-quatre {
     width: 100%;
