--- a/src/sass/modules/_s1Quatre.scss
+++ b/src/sass/modules/_s1Quatre.scss
@@ -108,13 +108,14 @@
         width: 100%;
         flex-direction: column;
         height:fit-content;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
     .container-quatre{
         flex-direction: column;
         height: fit-content;
         gap: 0px;
+        width: 55%;
     }
     .box-quatre{
         width: 100%;
